# multi-tenancy-pms

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  check_db.py  check_project_users.py  check_user.py  create_test_user.py  main.py  pyproject.toml  pytest.ini  requirements-test.txt  update_db.py
backend/alembic/: env.py
backend/alembic/versions/: 316598a009fb_merge_heads.py  6c2e018e0433_add_updated_at_column_to_projects_table.py  8ec36df3f942_add_updated_at_to_projects_table.py  add_project_users_table.py  babf3a77b074_initial_migration.py
backend/api/: dependencies.py  protected_routes.py  routes.py  security.py
backend/application/: dtos.py  services.py
backend/application/use_cases/: project_management.py  project_user_management.py  task_management.py  user_management.py
backend/core/: config.py
backend/domain/: entities.py  repositories.py
backend/infrastructure/: models.py  project_user_repository.py  repositories.py
backend/scripts/: check_db.py  check_schema.py
backend/tests/: conftest.py  test_auth.py  test_projects.py  test_tasks.py
backend/tests/unit/: test_task_management.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.js
frontend/src/api/: api.js  projectService.js  taskService.js  userService.js
frontend/src/components/: AuthForms.css  CreateProjectForm.js  CreateTaskForm.css  CreateTaskForm.js  EditTaskModal.css  EditTaskModal.js  LoginForm.js  PrivateRoute.js  ProjectForm.css  (+10 more)
(+5 files in other folders)
